add realtime update with socket

--- a/api/.env.example
+++ b/api/.env.example
@@ -7,3 +7,7 @@ DB_PASSWORD=
 JWT_SECRET=youraccesstokensecret
 CHAIN_ID=56
 FUNDING_WALLET=0xabcd1234
+BLOCKCHAIN_LP_ADDRESS=0x9cFd340Cd8879478Bdf813F4d9564e9632E314F2
+BLOCKCHAIN_LP_CONTRACT=0x10ED43C718714eb63d5aA57B78B54704E256024E
+BLOCKCHAIN_BURN_ADDRESS=0x0000000000000000000000000000000000000001
+BLOCKCHAIN_CONTRACT=0x0cf011a946f23a03ceff92a4632d5f9288c6c70d
