--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "pg-hstore": "^2.3.3",
     "rotating-file-stream": "^2.1.5",
     "sequelize": "^6.5.0",
+    "socket.io": "^4.2.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
